--- a/comics/219/index.html
+++ b/comics/219/index.html
@@ -9,23 +9,23 @@
     <meta name="description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
     <meta name="theme-color" content="#993399" />
 
-    <title>comiCSS #218: Latibulate</title>
+    <title>comiCSS #219: Guess The Movie</title>
 
-    <meta property="og:title" content="comiCSS #218: Latibulate" />
+    <meta property="og:title" content="comiCSS #219: Guess The Movie" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://comicss.art/comics/218" />
-    <meta property="og:image" content="https://comicss.art/comics/218/thumb.png" />
-    <meta property="og:description" content="latibulate (verb, archaic) to position oneself in a safe place, like a corner, to avoid reality or difficult conditions. .latibulate { position: fixed; bottom: 0; right: 0; scale: 0.5; }" />
+    <meta property="og:url" content="https://comicss.art/comics/219" />
+    <meta property="og:image" content="https://comicss.art/comics/219/thumb.png" />
+    <meta property="og:description" content="A cartoon character indicatng that today is not a comic but a CSS game, and to click on view source with the link" />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://comicss.art/comics/218">
-    <meta name="twitter:title" content="comiCSS #218: Latibulate">
-    <meta name="twitter:description" content="latibulate (verb, archaic) to position oneself in a safe place, like a corner, to avoid reality or difficult conditions. .latibulate { position: fixed; bottom: 0; right: 0; scale: 0.5; }">
-    <meta name="twitter:image" content="https://comicss.art/comics/218/thumb.png">
+    <meta name="twitter:url" content="https://comicss.art/comics/219">
+    <meta name="twitter:title" content="comiCSS #219: Guess The Movie">
+    <meta name="twitter:description" content="A cartoon character indicatng that today is not a comic but a CSS game, and to click on view source with the link">
+    <meta name="twitter:image" content="https://comicss.art/comics/219/thumb.png">
     <link rel="monetization" href="https://fynbos.me/alvaro">
 
     <link rel="shortcut icon" href="/favicon.png" />
 
-    <link rel="canonical" href="https://comicss.art/comics/218" />
+    <link rel="canonical" href="https://comicss.art/comics/219" />
 
     <link rel="stylesheet" href="/css/almond.lite.min.css" />
     <link rel="stylesheet" href="/css/styles.css" />
@@ -96,13 +96,13 @@
         </ul>
       </nav>
     </header>
-    <main id="main">
+    <main id="main" class="latest">
       <noscript>
         This website needs JavaScript to navigate. But, you can see all the drawings linked at once 
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Latibulate</h1>
+      <h1>Guess The Movie</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/comics/1" rel="first">
@@ -111,13 +111,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/217" rel="prev">
+        <a href="/comics/218" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/184">
+        <a class="random-post" href="/comics/190">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -125,7 +125,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="/comics/219" rel="next">
+        <a href="/comics/220" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -139,8 +139,8 @@
         </a>
       </nav>
 
-      <div id="comic-strip" role="img" class="vertical" aria-label="latibulate (verb, archaic) to position oneself in a safe place, like a corner, to avoid reality or difficult conditions. .latibulate { position: fixed; bottom: 0; right: 0; scale: 0.5; }">
-        <img src="/comics/218/218-latibulate-0.webp" alt="" width="350" />
+      <div id="comic-strip" role="img" class="vertical" aria-label="A cartoon character indicatng that today is not a comic but a CSS game, and to click on view source with the link">
+        <img src="/comics/219/219-guess-the-movie-0.webp" alt="" width="350" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -150,13 +150,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/217" rel="prev">
+        <a href="/comics/218" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/112">
+        <a class="random-post" href="/comics/169">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -164,7 +164,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="/comics/219" rel="next">
+        <a href="/comics/220" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -178,9 +178,9 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permanent link" id="permanent-link" href="/comics/218">https://comicss.art/comics/218</a></p>
-      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/218/latibulate.png">https://comicss.art/comics/218/latibulate.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/218/latibulate.html" rel="alternate">https://comicss.art/comics/218/latibulate.html</a></p>
+      <p>Permalink: <a aria-label="permanent link" id="permanent-link" href="/comics/219">https://comicss.art/comics/219</a></p>
+      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/219/guess-the-movie.png">https://comicss.art/comics/219/guess-the-movie.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/219/guess-the-movie.html" rel="alternate">https://comicss.art/comics/219/guess-the-movie.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -218,7 +218,7 @@
       </nav>
     </footer>
 
-    <script>let postId = 218;</script>
+    <script>let postId = 219;</script>
     <script src="/js/data.js?"></script>
     <script src="/js/code.js"></script>
   </body>
