--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Latibulate</h1>
+      <h1>Guess The Movie</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/comics/1" rel="first">
@@ -112,13 +112,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/217" rel="prev">
+        <a href="/comics/218" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/184">
+        <a class="random-post" href="/comics/190">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -140,8 +140,8 @@
         </a>
       </nav>
 
-      <div id="comic-strip" class="vertical" role="img" aria-label="latibulate (verb, archaic) to position oneself in a safe place, like a corner, to avoid reality or difficult conditions. .latibulate { position: fixed; bottom: 0; right: 0; scale: 0.5; }">
-        <img src="/comics/218/218-latibulate-0.webp" alt="" width="350" />
+      <div id="comic-strip" class="vertical" role="img" aria-label="A cartoon character indicatng that today is not a comic but a CSS game, and to click on view source with the link">
+        <img src="/comics/219/219-guess-the-movie-0.webp" alt="" width="350" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -151,13 +151,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/217" rel="prev">
+        <a href="/comics/218" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/112">
+        <a class="random-post" href="/comics/169">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -179,9 +179,9 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/218">https://comicss.art/comics/218</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/218/latibulate.png">https://comicss.art/comics/218/latibulate.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/218/latibulate.html" rel="alternate">https://comicss.art/comics/218/latibulate.html</a></p>
+      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/219">https://comicss.art/comics/219</a></p>
+      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/219/guess-the-movie.png">https://comicss.art/comics/219/guess-the-movie.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/219/guess-the-movie.html" rel="alternate">https://comicss.art/comics/219/guess-the-movie.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -220,7 +220,7 @@
     </footer>
 
     <script>let postId = 0;</script>
-    <script src="/js/data.js?last-updated=2025-10-22"></script>
+    <script src="/js/data.js?last-updated=2025-10-27"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
