--- a/comics/220/index.html
+++ b/comics/220/index.html
@@ -9,24 +9,23 @@
     <meta name="description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
     <meta name="theme-color" content="#993399" />
 
-    <title>comiCSS</title>
+    <title>comiCSS #220: Word Association</title>
 
-    <meta property="og:title" content="comiCSS" />
+    <meta property="og:title" content="comiCSS #220: Word Association" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://comicss.art" />
-    <meta property="og:image" content="https://comicss.art/images/thumb.jpg" />
-    <meta property="og:description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
+    <meta property="og:url" content="https://comicss.art/comics/220" />
+    <meta property="og:image" content="https://comicss.art/comics/220/thumb.png" />
+    <meta property="og:description" content="3 cartoons associating regular words with CSS properties, and applying them in the cartoon itself. City turns into Opacity:0.3, and it has a city that fades out. Hens turns into hyphens:auto, and a list of chickens break between lines with hyphens (cutting some in half). Ape turns into shape-outside:url(--head), it has a monkey with text that wraps around its head." />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="http://comicss.art/">
-    <meta name="twitter:title" content="comiCSS">
-    <meta name="twitter:description" content="comiCSS: A webcomic about CSS. Coded in CSS.">
-    <meta name="twitter:image" content="https://comicss.art/images/thumb.jpg">
+    <meta name="twitter:url" content="https://comicss.art/comics/220">
+    <meta name="twitter:title" content="comiCSS #220: Word Association">
+    <meta name="twitter:description" content="3 cartoons associating regular words with CSS properties, and applying them in the cartoon itself. City turns into Opacity:0.3, and it has a city that fades out. Hens turns into hyphens:auto, and a list of chickens break between lines with hyphens (cutting some in half). Ape turns into shape-outside:url(--head), it has a monkey with text that wraps around its head.">
+    <meta name="twitter:image" content="https://comicss.art/comics/220/thumb.png">
     <link rel="monetization" href="https://fynbos.me/alvaro">
 
     <link rel="shortcut icon" href="/favicon.png" />
-    <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
 
-    <link rel="canonical" href="https://comicss.art" />
+    <link rel="canonical" href="https://comicss.art/comics/220" />
 
     <link rel="stylesheet" href="/css/almond.lite.min.css" />
     <link rel="stylesheet" href="/css/styles.css" />
@@ -126,7 +125,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="#" rel="next">
+        <a href="/comics/221" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -140,7 +139,7 @@
         </a>
       </nav>
 
-      <div id="comic-strip" class="" role="img" aria-label="3 cartoons associating regular words with CSS properties, and applying them in the cartoon itself. City turns into Opacity:0.3, and it has a city that fades out. Hens turns into hyphens:auto, and a list of chickens break between lines with hyphens (cutting some in half). Ape turns into shape-outside:url(--head), it has a monkey with text that wraps around its head.">
+      <div id="comic-strip" role="img" class="" aria-label="3 cartoons associating regular words with CSS properties, and applying them in the cartoon itself. City turns into Opacity:0.3, and it has a city that fades out. Hens turns into hyphens:auto, and a list of chickens break between lines with hyphens (cutting some in half). Ape turns into shape-outside:url(--head), it has a monkey with text that wraps around its head.">
         <img src="/comics/220/220-word-association-0.webp" alt="" width="350" />
         <img src="/comics/220/220-word-association-1.webp" alt="" width="350" />
         <img src="/comics/220/220-word-association-2.webp" alt="" width="350" />
@@ -174,7 +173,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="#" rel="next">
+        <a href="/comics/221" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -188,8 +187,8 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/220">https://comicss.art/comics/220</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/220/word-association.png">https://comicss.art/comics/220/word-association.png</a></p>
+      <p>Permalink: <a aria-label="permanent link" id="permanent-link" href="/comics/220">https://comicss.art/comics/220</a></p>
+      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/220/word-association.png">https://comicss.art/comics/220/word-association.png</a></p>
       <p>Source code: <a aria-label="html version" id="code-link" href="/comics/220/word-association.html" rel="alternate">https://comicss.art/comics/220/word-association.html</a></p>
 
       <hr />
@@ -228,8 +227,8 @@
       </nav>
     </footer>
 
-    <script>let postId = 0;</script>
-    <script src="/js/data.js?last-updated=2025-11-01"></script>
+    <script>let postId = 220;</script>
+    <script src="/js/data.js?"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
