--- a/comics/221/index.html
+++ b/comics/221/index.html
@@ -9,24 +9,23 @@
     <meta name="description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
     <meta name="theme-color" content="#993399" />
 
-    <title>comiCSS</title>
+    <title>comiCSS #221: Cookie Jar</title>
 
-    <meta property="og:title" content="comiCSS" />
+    <meta property="og:title" content="comiCSS #221: Cookie Jar" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://comicss.art" />
-    <meta property="og:image" content="https://comicss.art/images/thumb.jpg" />
-    <meta property="og:description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
+    <meta property="og:url" content="https://comicss.art/comics/221" />
+    <meta property="og:image" content="https://comicss.art/comics/221/thumb.png" />
+    <meta property="og:description" content="comic strip with 3 panels. The Tailwind logo is asking for help because it has its hand stuck in a jar labelled 'class names'. Someone off-panel says that it could get the hand out if it dropped all the classes and get only one, and how it could make it if it applied itself. In the last panel the Tailwind logo goes back to complaining about having the hand stuck and people not helping." />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="http://comicss.art/">
-    <meta name="twitter:title" content="comiCSS">
-    <meta name="twitter:description" content="comiCSS: A webcomic about CSS. Coded in CSS.">
-    <meta name="twitter:image" content="https://comicss.art/images/thumb.jpg">
+    <meta name="twitter:url" content="https://comicss.art/comics/221">
+    <meta name="twitter:title" content="comiCSS #221: Cookie Jar">
+    <meta name="twitter:description" content="comic strip with 3 panels. The Tailwind logo is asking for help because it has its hand stuck in a jar labelled 'class names'. Someone off-panel says that it could get the hand out if it dropped all the classes and get only one, and how it could make it if it applied itself. In the last panel the Tailwind logo goes back to complaining about having the hand stuck and people not helping.">
+    <meta name="twitter:image" content="https://comicss.art/comics/221/thumb.png">
     <link rel="monetization" href="https://fynbos.me/alvaro">
 
     <link rel="shortcut icon" href="/favicon.png" />
-    <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
 
-    <link rel="canonical" href="https://comicss.art" />
+    <link rel="canonical" href="https://comicss.art/comics/221" />
 
     <link rel="stylesheet" href="/css/almond.lite.min.css" />
     <link rel="stylesheet" href="/css/styles.css" />
@@ -126,7 +125,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="#" rel="next">
+        <a href="/comics/222" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -140,7 +139,7 @@
         </a>
       </nav>
 
-      <div id="comic-strip" class="" role="img" aria-label="comic strip with 3 panels. The Tailwind logo is asking for help because it has its hand stuck in a jar labelled 'class names'. Someone off-panel says that it could get the hand out if it dropped all the classes and get only one, and how it could make it if it applied itself. In the last panel the Tailwind logo goes back to complaining about having the hand stuck and people not helping.">
+      <div id="comic-strip" role="img" class="" aria-label="comic strip with 3 panels. The Tailwind logo is asking for help because it has its hand stuck in a jar labelled 'class names'. Someone off-panel says that it could get the hand out if it dropped all the classes and get only one, and how it could make it if it applied itself. In the last panel the Tailwind logo goes back to complaining about having the hand stuck and people not helping.">
         <img src="/comics/221/221-cookie-jar-0.webp" alt="" width="350" />
         <img src="/comics/221/221-cookie-jar-1.webp" alt="" width="350" />
         <img src="/comics/221/221-cookie-jar-2.webp" alt="" width="350" />
@@ -167,7 +166,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="#" rel="next">
+        <a href="/comics/222" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -181,8 +180,8 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/221">https://comicss.art/comics/221</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/221/cookie-jar.png">https://comicss.art/comics/221/cookie-jar.png</a></p>
+      <p>Permalink: <a aria-label="permanent link" id="permanent-link" href="/comics/221">https://comicss.art/comics/221</a></p>
+      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/221/cookie-jar.png">https://comicss.art/comics/221/cookie-jar.png</a></p>
       <p>Source code: <a aria-label="html version" id="code-link" href="/comics/221/cookie-jar.html" rel="alternate">https://comicss.art/comics/221/cookie-jar.html</a></p>
 
       <hr />
@@ -221,8 +220,8 @@
       </nav>
     </footer>
 
-    <script>let postId = 0;</script>
-    <script src="/js/data.js?last-updated=2025-11-09"></script>
+    <script>let postId = 221;</script>
+    <script src="/js/data.js?"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
