--- a/comics/222/index.html
+++ b/comics/222/index.html
@@ -15,11 +15,11 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://comicss.art/comics/222" />
     <meta property="og:image" content="https://comicss.art/comics/222/thumb.png" />
-    <meta property="og:description" content="comic with 6 panel, two toggle switches (one on the other off) with eyes and legs are chilling, when the active gets an idea 'let's prank an HTML element!' The other toggle is not into it, so the first ne taps on it, activating it from off to on. The newly on-toggle enthusiastically exclaims I'm in. Let's go!" />
+    <meta property="og:description" content="comic with 6 panel, two toggle switches (one on the other off) with eyes and legs are chilling, when the active one says: 'DUUUUDE!!! I just had the best idea ever! What if we go to the Checkbox Mansion and prank that snobby element?' The other toggle is not into it 'I don't know, dude... Last time we tried, it wasn't fun. And I have work tomorrow... it's kinda late...', so the first one taps on it, activating it from off to on. The newly on-toggle enthusiastically exclaims 'IT'S ON!! LET'S DO THIS!!!'" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://comicss.art/comics/222">
     <meta name="twitter:title" content="comiCSS #222: Toggle Switches">
-    <meta name="twitter:description" content="comic with 6 panel, two toggle switches (one on the other off) with eyes and legs are chilling, when the active gets an idea 'let's prank an HTML element!' The other toggle is not into it, so the first ne taps on it, activating it from off to on. The newly on-toggle enthusiastically exclaims I'm in. Let's go!">
+    <meta name="twitter:description" content="comic with 6 panel, two toggle switches (one on the other off) with eyes and legs are chilling, when the active one says: 'DUUUUDE!!! I just had the best idea ever! What if we go to the Checkbox Mansion and prank that snobby element?' The other toggle is not into it 'I don't know, dude... Last time we tried, it wasn't fun. And I have work tomorrow... it's kinda late...', so the first one taps on it, activating it from off to on. The newly on-toggle enthusiastically exclaims 'IT'S ON!! LET'S DO THIS!!!'">
     <meta name="twitter:image" content="https://comicss.art/comics/222/thumb.png">
     <link rel="monetization" href="https://fynbos.me/alvaro">
 
@@ -139,7 +139,7 @@
         </a>
       </nav>
 
-      <div id="comic-strip" role="img" class="" aria-label="comic with 6 panel, two toggle switches (one on the other off) with eyes and legs are chilling, when the active gets an idea 'let's prank an HTML element!' The other toggle is not into it, so the first ne taps on it, activating it from off to on. The newly on-toggle enthusiastically exclaims I'm in. Let's go!">
+      <div id="comic-strip" role="img" class="" aria-label="comic with 6 panel, two toggle switches (one on the other off) with eyes and legs are chilling, when the active one says: 'DUUUUDE!!! I just had the best idea ever! What if we go to the Checkbox Mansion and prank that snobby element?' The other toggle is not into it 'I don't know, dude... Last time we tried, it wasn't fun. And I have work tomorrow... it's kinda late...', so the first one taps on it, activating it from off to on. The newly on-toggle enthusiastically exclaims 'IT'S ON!! LET'S DO THIS!!!'">
         <img src="/comics/222/222-toggle-switches-0.webp" alt="" width="350" />
         <img src="/comics/222/222-toggle-switches-1.webp" alt="" width="350" />
         <img src="/comics/222/222-toggle-switches-2.webp" alt="" width="350" />
