--- a/comics/222/index.html
+++ b/comics/222/index.html
@@ -9,24 +9,23 @@
     <meta name="description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
     <meta name="theme-color" content="#993399" />
 
-    <title>comiCSS</title>
+    <title>comiCSS #222: Toggle Switches</title>
 
-    <meta property="og:title" content="comiCSS" />
+    <meta property="og:title" content="comiCSS #222: Toggle Switches" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://comicss.art" />
-    <meta property="og:image" content="https://comicss.art/images/thumb.jpg" />
-    <meta property="og:description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
+    <meta property="og:url" content="https://comicss.art/comics/222" />
+    <meta property="og:image" content="https://comicss.art/comics/222/thumb.png" />
+    <meta property="og:description" content="comic with 6 panel, two toggle switches (one on the other off) with eyes and legs are chilling, when the active one says: 'DUUUUDE!!! I just had the best idea ever! What if we go to the Checkbox Mansion and prank that snobby element?' The other toggle is not into it 'I don't know, dude... Last time we tried, it wasn't fun. And I have work tomorrow... it's kinda late...', so the first one taps on it, activating it from off to on. The newly on-toggle enthusiastically exclaims 'IT'S ON!! LET'S DO THIS!!!'" />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="http://comicss.art/">
-    <meta name="twitter:title" content="comiCSS">
-    <meta name="twitter:description" content="comiCSS: A webcomic about CSS. Coded in CSS.">
-    <meta name="twitter:image" content="https://comicss.art/images/thumb.jpg">
+    <meta name="twitter:url" content="https://comicss.art/comics/222">
+    <meta name="twitter:title" content="comiCSS #222: Toggle Switches">
+    <meta name="twitter:description" content="comic with 6 panel, two toggle switches (one on the other off) with eyes and legs are chilling, when the active one says: 'DUUUUDE!!! I just had the best idea ever! What if we go to the Checkbox Mansion and prank that snobby element?' The other toggle is not into it 'I don't know, dude... Last time we tried, it wasn't fun. And I have work tomorrow... it's kinda late...', so the first one taps on it, activating it from off to on. The newly on-toggle enthusiastically exclaims 'IT'S ON!! LET'S DO THIS!!!'">
+    <meta name="twitter:image" content="https://comicss.art/comics/222/thumb.png">
     <link rel="monetization" href="https://fynbos.me/alvaro">
 
     <link rel="shortcut icon" href="/favicon.png" />
-    <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
 
-    <link rel="canonical" href="https://comicss.art" />
+    <link rel="canonical" href="https://comicss.art/comics/222" />
 
     <link rel="stylesheet" href="/css/almond.lite.min.css" />
     <link rel="stylesheet" href="/css/styles.css" />
@@ -126,7 +125,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="#" rel="next">
+        <a href="/comics/223" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -140,7 +139,7 @@
         </a>
       </nav>
 
-      <div id="comic-strip" class="" role="img" aria-label="comic with 6 panel, two toggle switches (one on the other off) with eyes and legs are chilling, when the active one says: 'DUUUUDE!!! I just had the best idea ever! What if we go to the Checkbox Mansion and prank that snobby element?' The other toggle is not into it 'I don't know, dude... Last time we tried, it wasn't fun. And I have work tomorrow... it's kinda late...', so the first one taps on it, activating it from off to on. The newly on-toggle enthusiastically exclaims 'IT'S ON!! LET'S DO THIS!!!'">
+      <div id="comic-strip" role="img" class="" aria-label="comic with 6 panel, two toggle switches (one on the other off) with eyes and legs are chilling, when the active one says: 'DUUUUDE!!! I just had the best idea ever! What if we go to the Checkbox Mansion and prank that snobby element?' The other toggle is not into it 'I don't know, dude... Last time we tried, it wasn't fun. And I have work tomorrow... it's kinda late...', so the first one taps on it, activating it from off to on. The newly on-toggle enthusiastically exclaims 'IT'S ON!! LET'S DO THIS!!!'">
         <img src="/comics/222/222-toggle-switches-0.webp" alt="" width="350" />
         <img src="/comics/222/222-toggle-switches-1.webp" alt="" width="350" />
         <img src="/comics/222/222-toggle-switches-2.webp" alt="" width="350" />
@@ -170,7 +169,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="#" rel="next">
+        <a href="/comics/223" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -184,8 +183,8 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/222">https://comicss.art/comics/222</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/222/toggle-switches.png">https://comicss.art/comics/222/toggle-switches.png</a></p>
+      <p>Permalink: <a aria-label="permanent link" id="permanent-link" href="/comics/222">https://comicss.art/comics/222</a></p>
+      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/222/toggle-switches.png">https://comicss.art/comics/222/toggle-switches.png</a></p>
       <p>Source code: <a aria-label="html version" id="code-link" href="/comics/222/toggle-switches.html" rel="alternate">https://comicss.art/comics/222/toggle-switches.html</a></p>
 
       <hr />
@@ -224,8 +223,8 @@
       </nav>
     </footer>
 
-    <script>let postId = 0;</script>
-    <script src="/js/data.js?last-updated=2025-11-11"></script>
+    <script>let postId = 222;</script>
+    <script src="/js/data.js?"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
